--- a/hosted_file/base.css
+++ b/hosted_file/base.css
@@ -2080,7 +2080,7 @@
  #app-mount .contextMenu-HLZMGh .item-1Yvehc {
      margin: 0;
      padding: 5px 10px;
-     cursor: pointer;
+     cursor: move;
 }
  #app-mount .contextMenu-HLZMGh .item-1Yvehc:hover {
      background-color: rgba(var(--PrimaryBackgroundColor));
@@ -2167,7 +2167,7 @@
 }
  #app-mount .itemBase-1Qj4z6 {
      padding: 0px 5px;
-     cursor: pointer;
+     cursor: move;
      min-height: 25px;
      margin: 0px 0px;
      font-size: 15px;
@@ -2207,7 +2207,7 @@
      background-color: rgba(var(--PrimaryBackgroundColor));
 }
 .selectable-3dP3y- {
-    cursor: pointer;
+    cursor: move;
 }
 .base-1pYU8j {
     padding: 5px;
@@ -2644,7 +2644,7 @@
      width: 35px;
      border-bottom: 5px solid transparent;
      margin-right: 10px;
-     cursor: pointer;
+     cursor: move;
 }
  .infoBar-U6oBFk, .infoBarWrapper-283ttO.infoBarExpanded-2Of7UZ {
      height: 75px;
@@ -2735,7 +2735,7 @@
  .clickable-11uBi-:hover, .selected-BYpGTS {
      color: var(--interactive-hover);
      background-color: rgba(var(--SecondaryBackgroundColor));
-     cursor: pointer;
+     cursor: move;
 }
  .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9, .wrapper-1BJsBx:hover .childWrapper-anI2G9 {
      color: #fff;
@@ -3159,7 +3159,7 @@
  .bar-30k2ka {
      color: #fff;
      height: 20px;
-     cursor: pointer;
+     cursor: move;
      text-transform: none;
      -webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
      box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
@@ -3180,7 +3180,7 @@
      font-size: 17.5px;
      font-weight: 600;
      line-height: 10px;
-     cursor: pointer;
+     cursor: move;
 }
  .channelTextArea-rNsIhG {
      border-top: 2px rgba(var(--AccentColor), 1) solid;
@@ -3211,7 +3211,7 @@
      background-color: rgba(var(--PrimaryBackgroundColor));
 }
  .friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9 {
-     cursor: pointer;
+     cursor: move;
      width: 25px;
      height: 25px;
      margin-left: 0px;
@@ -3359,7 +3359,7 @@
      background-color: rgba(var(--SecondaryBackgroundColor));
      width: 100px;
      height: 100px;
-     cursor: pointer;
+     cursor: move;
      margin: 5px;
 }
  .regionSelectModal-12e-57 .regionSelectModalOption-2DSIZ3:hover {
@@ -3487,7 +3487,7 @@
 }
  .unicodeShortcut-15J8Ck {
      background: rgba(var(--SecondaryBackgroundColor));
-     cursor: pointer;
+     cursor: move;
      height: 48px;
      width: 100%;
 }
@@ -3715,7 +3715,7 @@
  .keybindShortcut-1BD6Z1 span {
      padding: 5px 5px 5px;
      margin-right: 0px;
-     cursor: pointer;
+     cursor: move;
      min-width: 15px;
      min-height: 15px;
      text-align: center;
@@ -3939,7 +3939,7 @@
 }
  .app-2rEoOp button {
      color: rgba(var(--AccentColor), 1);
-     cursor: pointer;
+     cursor: move;
 }
  .emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
      border-bottom-color: rgba(var(--AccentColor), 1);
@@ -4087,7 +4087,7 @@
      background-color: rgba(var(--AccentColor), 1) !important;
 }
  .mediaBarGrabber-1FqnbN {
-     cursor: pointer;
+     cursor: move;
 }
  .checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
      background-color: rgba(var(--AccentColor), 1);
@@ -4135,7 +4135,7 @@
 }
  .clickable-1JJAn8:hover .layout-2DM8Md {
      background-color: rgba(var(--SecondaryBackgroundColor));
-     cursor: pointer;
+     cursor: move;
      animation: rainbow 5s linear infinite;
 }
  .lookGhost-2Fn_0-.colorBrand-3pXr91 {
@@ -4160,7 +4160,7 @@
      color: rgba(var(--AccentColor), 1);
      background-color: rgba(var(--PrimaryBackgroundColor));
 }
- .theme-dark .tooltipBrand-g03Nz8 .tooltipPointer-3ZfirK, .theme-light .tooltipBrand-g03Nz8 .tooltipPointer-3ZfirK {
+ .theme-dark .tooltipBrand-g03Nz8 .tooltipmove-3ZfirK, .theme-light .tooltipBrand-g03Nz8 .tooltipPointer-3ZfirK {
      border-top-color: rgba(var(--AccentColor), 1);
 }
  .theme-dark .popoutList-T9CKZQ {
