--- a/index_files/css.css
+++ b/index_files/css.css
@@ -6,4 +6,19 @@
   src: url(https://fonts.gstatic.com/s/michroma/v11/PN_zRfy9qWD8fEagAPg9pTk.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+.fontLayer {
+  z-index: 1;
+}
 
+.fadeTop {
+  width: 100%;
+  height: 2000px;
+  z-index: 5;
+  position: absolute;
+  top: 0;
+background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 46%, rgba(255,255,255,1) 100%); /* ff3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 100%); /* chrome10-25,safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 100%); /* w3c, ie10+, ff16+, chrome26+, opera12+, safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* ie6-9 */
+
+}
