--- a/index_files/css.css
+++ b/index_files/css.css
@@ -6,7 +6,902 @@
   src: url(https://fonts.gstatic.com/s/michroma/v11/PN_zRfy9qWD8fEagAPg9pTk.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-[aos="fade"] {
-  opacity: 0;
-  transition-property: opacity;
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin:0;
+  padding:0;
+  border:0;
+  font-size:100%;
+  font:inherit;
+  vertical-align:baseline;
 }
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section { display:block; }
+
+body { line-height:1; }
+
+ol,
+ul { list-style:none; }
+
+blockquote,
+q { quotes:none; }
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content:'';
+  content:none;
+}
+
+table {
+  border-collapse:collapse;
+  border-spacing:0;
+}
+
+body { -webkit-text-size-adjust:none; }
+
+mark {
+  background-color:transparent;
+  color:inherit;
+  text-align: right;
+}
+
+input::-moz-focus-inner {
+  border:0;
+  padding:0;
+}
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+  -moz-appearance:none;
+  -webkit-appearance:none;
+  -ms-appearance:none;
+  appearance:none;
+}
+
+*,
+*:before,
+*:after { box-sizing:border-box; }
+
+body {
+  min-width:320px;
+  min-height:100vh;
+  line-height:1.0;
+  word-wrap:break-word;
+  overflow-x:hidden;
+  background-color:#EDEDED;
+}
+
+u { text-decoration:underline; }
+
+strong {
+  color:inherit;
+  font-weight:bolder;
+}
+
+em { font-style:italic; }
+
+code {
+  font-family:'Lucida Console','Courier New',monospace;
+  font-weight:normal;
+  text-indent:0;
+  letter-spacing:0;
+  font-size:0.9em;
+  margin:0 0.25em;
+  padding:0.25em 0.5em;
+  background-color:rgba(144,144,144,0.25);
+  border-radius:0.25em;
+}
+
+mark { background-color:rgba(144,144,144,0.25); }
+
+a {
+  -moz-transition:color 0.25s ease,background-color 0.25s ease,border-color 0.25s ease;
+  -webkit-transition:color 0.25s ease,background-color 0.25s ease,border-color 0.25s ease;
+  -ms-transition:color 0.25s ease,background-color 0.25s ease,border-color 0.25s ease;
+  transition:color 0.25s ease,background-color 0.25s ease,border-color 0.25s ease;
+  color:inherit;
+  text-decoration:underline;
+}
+
+s { text-decoration:line-through; }
+
+html { font-size:24pt; }
+
+#wrapper {
+  -webkit-overflow-scrolling:touch;
+  display:flex;
+  -moz-flex-direction:column;
+  -webkit-flex-direction:column;
+  -ms-flex-direction:column;
+  flex-direction:column;
+  -moz-align-items:center;
+  -webkit-align-items:center;
+  -ms-align-items:center;
+  align-items:center;
+  -moz-justify-content:center;
+  -webkit-justify-content:center;
+  -ms-justify-content:center;
+  justify-content:center;
+  min-height:100vh;
+  position:relative;
+  z-index:2;
+  overflow:hidden;
+}
+
+#main {
+  display:flex;
+  position:relative;
+  max-width:100%;
+  z-index:1;
+  -moz-align-items:center;
+  -webkit-align-items:center;
+  -ms-align-items:center;
+  align-items:center;
+  -moz-justify-content:center;
+  -webkit-justify-content:center;
+  -ms-justify-content:center;
+  justify-content:center;
+  -moz-flex-grow:0;
+  -webkit-flex-grow:0;
+  -ms-flex-grow:0;
+  flex-grow:0;
+  -moz-flex-shrink:0;
+  -webkit-flex-shrink:0;
+  -ms-flex-shrink:0;
+  flex-shrink:0;
+  text-align:right;
+  -moz-transition:opacity 1s ease-in-out 0s;
+  -webkit-transition:opacity 1s ease-in-out 0s;
+  -ms-transition:opacity 1s ease-in-out 0s;
+  transition:opacity 1s ease-in-out 0s;
+}
+
+#main>.inner {
+  position:relative;
+  z-index:1;
+  border-radius:inherit;
+  padding:8rem 1rem;
+  max-width:100%;
+  width:56rem;
+}
+
+#main>.inner>* {
+  margin-top:0rem;
+  margin-bottom:0rem;
+  -moz-transition:opacity 1s ease-in-out 1s;
+  -webkit-transition:opacity 1s ease-in-out 1s;
+  -ms-transition:opacity 1s ease-in-out 1s;
+  transition:opacity 1s ease-in-out 1s;
+}
+
+#main>.inner>:first-child { margin-top:0 !important; }
+
+#main>.inner>:last-child { margin-bottom:0 !important; }
+
+#main>.inner>.full {
+  margin-left:calc(-1rem);
+  width:calc(100% + 2rem + 0.4725px);
+  max-width:calc(100% + 2rem + 0.4725px);
+}
+
+#main>.inner>.full:first-child {
+  margin-top:-8rem !important;
+  border-top-left-radius:inherit;
+  border-top-right-radius:inherit;
+}
+
+#main>.inner>.full:last-child {
+  margin-bottom:-8rem !important;
+  border-bottom-left-radius:inherit;
+  border-bottom-right-radius:inherit;
+}
+
+#main>.inner>.full.screen {
+  width:100vw;
+  max-width:100vw;
+  position:relative;
+  border-radius:0 !important;
+  left:50%;
+  right:auto;
+  margin-left:-50vw;
+}
+
+body.is-loading #main { opacity:0; }
+
+body.is-loading #main>.inner>* { opacity:0; }
+
+#main>.inner>:nth-child(2) {
+  -moz-transition-delay:1.625s;
+  -webkit-transition-delay:1.625s;
+  -ms-transition-delay:1.625s;
+  transition-delay:1.625s;
+}
+
+#main>.inner>:nth-child(3) {
+  -moz-transition-delay:2.25s;
+  -webkit-transition-delay:2.25s;
+  -ms-transition-delay:2.25s;
+  transition-delay:2.25s;
+}
+
+#main>.inner>:nth-child(4) {
+  -moz-transition-delay:2.875s;
+  -webkit-transition-delay:2.875s;
+  -ms-transition-delay:2.875s;
+  transition-delay:2.875s;
+}
+
+#main>.inner>:nth-child(5) {
+  -moz-transition-delay:3.5s;
+  -webkit-transition-delay:3.5s;
+  -ms-transition-delay:3.5s;
+  transition-delay:3.5s;
+}
+
+#main>.inner>:nth-child(6) {
+  -moz-transition-delay:4.125s;
+  -webkit-transition-delay:4.125s;
+  -ms-transition-delay:4.125s;
+  transition-delay:4.125s;
+}
+
+#main>.inner>:nth-child(7) {
+  -moz-transition-delay:4.75s;
+  -webkit-transition-delay:4.75s;
+  -ms-transition-delay:4.75s;
+  transition-delay:4.75s;
+}
+
+#main>.inner>:nth-child(8) {
+  -moz-transition-delay:5.375s;
+  -webkit-transition-delay:5.375s;
+  -ms-transition-delay:5.375s;
+  transition-delay:5.375s;
+}
+
+#main>.inner>:nth-child(9) {
+  -moz-transition-delay:6s;
+  -webkit-transition-delay:6s;
+  -ms-transition-delay:6s;
+  transition-delay:6s;
+}
+
+#main>.inner>:nth-child(10) {
+  -moz-transition-delay:6.625s;
+  -webkit-transition-delay:6.625s;
+  -ms-transition-delay:6.625s;
+  transition-delay:6.625s;
+}
+
+#main>.inner>:nth-child(11) {
+  -moz-transition-delay:7.25s;
+  -webkit-transition-delay:7.25s;
+  -ms-transition-delay:7.25s;
+  transition-delay:7.25s;
+}
+
+#main>.inner>:nth-child(12) {
+  -moz-transition-delay:7.875s;
+  -webkit-transition-delay:7.875s;
+  -ms-transition-delay:7.875s;
+  transition-delay:7.875s;
+}
+
+#main>.inner>:nth-child(13) {
+  -moz-transition-delay:8.5s;
+  -webkit-transition-delay:8.5s;
+  -ms-transition-delay:8.5s;
+  transition-delay:8.5s;
+}
+
+body.is-instant #main,
+body.is-instant #main>.inner>*,
+body.is-instant #main>.inner>section>* {
+  -moz-transition:none !important;
+  -webkit-transition:none !important;
+  -ms-transition:none !important;
+  transition:none !important;
+}
+
+body.is-instant:after {
+  display:none !important;
+  -moz-transition:none !important;
+  -webkit-transition:none !important;
+  -ms-transition:none !important;
+  transition:none !important;
+}
+
+h1 br+br,
+h2 br+br,
+h3 br+br,
+p br+br {
+  display:block;
+  content:' ';
+}
+
+h1 .li,
+h2 .li,
+h3 .li,
+p .li {
+  display:list-item;
+  padding-left:0.5em;
+  margin:0.75em 0 0 1em;
+}
+
+#text01 br+br { margin-top:0.9rem; }
+
+#text01 {
+  text-align:center;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:1.5;
+  font-weight:400;
+}
+
+#text01 a { text-decoration:underline; }
+
+
+
+
+#text02 {
+  text-align:right;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:2.5;
+  font-weight:400;
+  padding-right: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+#text02 a { text-decoration:underline; }
+
+#text02 a:hover { text-decoration:none; }
+
+#text03 br+br { margin-top:1.5rem; }
+
+#text_black {
+  text-align:right;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:2.5;
+  font-weight:400;
+  padding-right: 1rem;
+}
+
+#text03 a { text-decoration:underline; }
+
+#text03 a:hover { text-decoration:none; }
+
+#text04 br+br { margin-top:1.5rem; }
+
+#text04 {
+  text-align:right;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:2.5;
+  font-weight:400;
+}
+
+#text04 a { text-decoration:underline; }
+
+#text04 a:hover { text-decoration:none; }
+
+#text05 br+br { margin-top:1.5rem; }
+
+#text05 {
+  text-align:right;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:2.5;
+  font-weight:400;
+}
+
+#text05 a { text-decoration:underline; }
+
+#text05 a:hover { text-decoration:none; }
+
+#text06 br+br { margin-top:1.5rem; }
+
+#text06 {
+  text-align:right;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:2.5;
+  font-weight:400;
+}
+
+#text06 a { text-decoration:underline; }
+
+#text06 a:hover { text-decoration:none; }
+
+#toptext br+br { margin-top:0.9rem; }
+
+#toptext {
+  text-align:center;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:1.5;
+  font-weight:400;
+  padding-top:8rem;
+}
+
+#bottomtext {
+  text-align:center;
+  color:rgb(230, 230, 230);
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.875em;
+  line-height:1.5;
+  font-weight:400;
+  padding-top:1rem;
+  padding-bottom: 5rem;
+}
+
+#text07 a { text-decoration:underline; }
+
+#text07 a:hover { text-decoration:none; }
+
+#text07 mark {
+  color:#E6E6E6;
+  background-color:transparent;
+  text-align: right;
+}
+
+#credits br+br { margin-top:0.9rem; }
+
+#credits {
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.7em;
+  line-height:1.5;
+  font-weight:400;
+  cursor:default;
+  margin-top:1rem !important;
+}
+
+#credits a {
+  text-decoration:none !important;
+  -moz-transition:opacity 0.25s ease;
+  -webkit-transition:opacity 0.25s ease;
+  -ms-transition:opacity 0.25s ease;
+  transition:opacity 0.25s ease;
+  opacity:0.5;
+}
+
+#credits a:hover {
+  text-decoration:none !important;
+  opacity:1;
+}
+
+.links {
+  cursor:default;
+  padding:0;
+  line-height:1.5;
+}
+
+.links li { position:relative; }
+
+.links li a { display:block; }
+
+#links01 {
+  margin-left:-0.5rem;
+  width:calc(100% + 1.05rem);
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  font-size:1em;
+  font-weight:400;
+  text-align: right;
+  padding-right: 1rem;
+}
+
+#links01 li {
+  display:inline-block;
+  vertical-align:right;
+  margin-left:0.5rem;
+}
+
+#links01 li a {
+  color:#919191;
+  text-decoration:none;
+  text-align:right;
+}
+
+#links01 li a:hover { text-decoration:underline; }
+
+#links02 {
+  margin-left:-0.5rem;
+  width:calc(100% + 1.05rem);
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  font-size:1em;
+  font-weight:400;
+  text-align: right;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+#links02 li {
+  display:inline-block;
+  vertical-align:middle;
+  margin:0.5rem;
+}
+
+#links02 li a {
+  color:#919191;
+  text-decoration:none;
+}
+
+#links02 li a:hover { text-decoration:underline; }
+
+#links03 {
+  margin-left:-0.5rem;
+  width:calc(100% + 1.05rem);
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  font-size:1em;
+  font-weight:400;
+}
+
+#links03 li {
+  display:inline-block;
+  vertical-align:middle;
+  margin:0.5rem;
+}
+
+#links03 li a {
+  color:#919191;
+  text-decoration:none;
+}
+
+#links03 li a:hover { text-decoration:underline; }
+
+#links04 {
+  margin-left:-0.5rem;
+  width:calc(100% + 1.05rem);
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  font-size:1em;
+  font-weight:400;
+}
+
+#links04 li {
+  display:inline-block;
+  vertical-align:middle;
+  margin:0.5rem;
+}
+
+#links04 li a {
+  color:#919191;
+  text-decoration:none;
+}
+
+#links04 li a:hover { text-decoration:underline; }
+
+#links05 {
+  margin-left:-0.5rem;
+  width:calc(100% + 1.05rem);
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  font-size:1em;
+  font-weight:400;
+}
+
+#links05 li {
+  display:inline-block;
+  vertical-align:middle;
+  margin:0.5rem;
+}
+
+#links05 li a {
+  color:#919191;
+  text-decoration:none;
+}
+
+#links05 li a:hover { text-decoration:underline; }
+
+@media (max-width:1680px) {
+  html { font-size:18pt; }
+}
+
+@media (max-width:1280px) {
+  html { font-size:18pt; }
+}
+
+@media (max-width:980px) {
+  html { font-size:15pt; }
+}
+
+
+
+@media (max-width:736px) {
+  html { font-size:15pt; }
+
+  #main>.inner { padding:3.5rem 1rem; }
+
+  #main>.inner>* {
+    margin-top:0rem;
+    margin-bottom:0rem;
+  }
+
+  #main>.inner>.full {
+    margin-left:calc(-1rem);
+    width:calc(100% + 2rem + 0.4725px);
+    max-width:calc(100% + 2rem + 0.4725px);
+  }
+
+  #main>.inner>.full:first-child { margin-top:-3.5rem !important; }
+
+  #main>.inner>.full:last-child { margin-bottom:-3.5rem !important; }
+
+  #main>.inner>.full.screen { margin-left:-50vw; }
+
+  #text01 , #text02 {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.875em;
+    line-height:2;
+    padding-right: 1rem;
+  }
+
+  #text02:not(:first-child) { margin-top:1.125rem !important; }
+
+  #text02:not(:last-child) { margin-bottom:1.125rem !important; }
+
+  #text02 {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.875em;
+    line-height:1rem;
+    padding-right: 1rem;
+  }
+
+  #text03 {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.875em;
+    line-height:2.5;
+  }
+
+  #text04 {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.875em;
+    line-height:2.5;
+  }
+
+  #text05 {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.875em;
+    line-height:2.5;
+  }
+
+  #text06 {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.875em;
+    line-height:2.5;
+  }
+
+  #text07 {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.875em;
+    line-height:1.5;
+  }
+
+  #credits {
+    letter-spacing:0.04375rem;
+    width:calc(100% + 0.04375rem);
+    font-size:0.7em;
+    line-height:1.5;
+  }
+
+  #links01 {
+    margin-left:-0.5rem;
+    width:calc(100% + 1.04375rem);
+    letter-spacing:0.04375rem;
+    font-size:1em;
+  }
+
+  #links01 li { margin:0.5rem; }
+
+  #links02 {
+    margin-left:-0.5rem;
+    width:calc(100% + 1.04375rem);
+    letter-spacing:0.04375rem;
+    font-size:1em;
+  }
+
+  #links02 li { margin:0.5rem; }
+
+  #links03 {
+    margin-left:-0.5rem;
+    width:calc(100% + 1.04375rem);
+    letter-spacing:0.04375rem;
+    font-size:1em;
+  }
+
+  #links03 li { margin:0.5rem; }
+
+  #links04 {
+    margin-left:-0.5rem;
+    width:calc(100% + 1.04375rem);
+    letter-spacing:0.04375rem;
+    font-size:1em;
+  }
+
+  #links04 li { margin:0.5rem; }
+
+  #links05 {
+    margin-left:-0.5rem;
+    width:calc(100% + 1.04375rem);
+    letter-spacing:0.04375rem;
+    font-size:1em;
+  }
+
+  #links05 li { margin:0.5rem; }
+}
+
+@media (max-width:480px) {
+  #main>.inner>* {
+    margin-top:0rem;
+    margin-bottom:0rem;
+  }
+}
+
+@media (max-width:360px) {
+  #main>.inner { padding:2.625rem 0.75rem; }
+
+  #main>.inner>* {
+    margin-top:0rem;
+    margin-bottom:0rem;
+  }
+
+  #main>.inner>.full {
+    margin-left:calc(-0.75rem);
+    width:calc(100% + 1.5rem + 0.4725px);
+    max-width:calc(100% + 1.5rem + 0.4725px);
+  }
+
+  #main>.inner>.full:first-child { margin-top:-2.625rem !important; }
+
+  #main>.inner>.full:last-child { margin-bottom:-2.625rem !important; }
+
+  #main>.inner>.full.screen { margin-left:-50vw; }
+
+  #text { font-size:0.875em; }
+
+
+  #credits { font-size:0.7em; }
+
+  #links {
+    margin-left:-0.375rem;
+    width:calc(100% + 0.79375rem);
+    font-size:1em;
+  }
+
+  #links li { margin:0.375rem; }
+
+
+} 
