--- a/styles/css.css
+++ b/styles/css.css
@@ -116,6 +116,22 @@ code {
   line-height:1.5;
 }
 
+.row {
+  display: flex;
+  align-content: center;
+}
+
+
+.column {
+  flex: 33.33%;
+  padding-bottom: 4rem;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
+}
+
+
 #music-stream {
   margin-left:-0.5rem;
   width:calc(100% + 1.05rem);
@@ -126,6 +142,19 @@ code {
   text-align:right;
   padding-right:1rem;
 }
+
+#desc {
+  text-align:center;
+  color:#000000;
+  font-family:'Michroma',sans-serif;
+  letter-spacing:0.05rem;
+  width:calc(100% + 0.05rem);
+  font-size:0.4em;
+  line-height:1.5;
+  font-weight:400;
+  position: relative;
+}
+
 
 #music-stream a {
   color:#919191;
