--- a/styles/css.css
+++ b/styles/css.css
@@ -8,6 +8,7 @@
 }
 
 html {
+	scroll-behavior: smooth;
 	font-size: 24pt;
 }
 
@@ -61,6 +62,62 @@ code {
 	font-weight: 400;
 }
 
+#toc {
+	text-align: right;
+	color: #000000;
+	font-family: 'Michroma', sans-serif;
+	letter-spacing: 0.05rem;
+	width: calc(100% + 0.05rem);
+	font-size: 0.875em;
+	line-height: 2.5;
+	font-weight: 400;
+	padding-right: 1rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
+#tocc {
+	text-align: center;
+	color: #000000;
+	font-family: 'Michroma', sans-serif;
+	letter-spacing: 0.1rem;
+	width: calc(100% + 0.05rem);
+	font-size: 15pt;
+	line-height: 2.5;
+	font-weight: 400;
+	padding-right: 1rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
+
+#tocc a {
+	padding-left: 1em;
+	padding-right: 1em;
+	text-decoration: none;
+}
+#tocc a:visited {
+	padding-left: 1em;
+	padding-right: 1em;
+	text-decoration: none;
+	color:black;
+}
+#homebutton {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 100em;
+	z-index: 99;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	background-color: #EDEDED;
+	color: rgb(0, 0, 0);
+	cursor: pointer;
+	padding: 15px;
+}
+  
+#homebutton:hover {
+	background-color: #555;
+}
 #social {
 	text-align: right;
 	color: #000000;
