--- a/styles/css.css
+++ b/styles/css.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
 @font-face {
-	font-family: 'Michroma';
-	font-style: normal;
-	font-weight: 400;
-	src: url(https://fonts.gstatic.com/s/michroma/v11/PN_zRfy9qWD8fEagAPg9pTk.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    font-family: 'akkurat-monoregular';
+    src: url('akkurat-mono.woff2') format('woff2'),
+         url('akkurat-mono.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 html {
@@ -30,7 +31,7 @@ body {
 	line-height: 1.0;
 	word-wrap: break-word;
 	overflow-x: hidden;
-	background-color: #EDEDED;
+	background-color: #121212;
 	scrollbar-width: none;
 }
 
@@ -47,14 +48,15 @@ code {
 	font-size: 0.9em;
 	margin: 0 0.25em;
 	padding: 0.25em 0.5em;
-	background-color: rgba(144, 144, 144, 0.25);
+	background-color: #363636;
 	border-radius: 0.25em;
+	color: #080808
 }
 
 #text01 {
 	text-align: center;
-	color: #000000;
-	font-family: 'Michroma', sans-serif;
+	color: #363636;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -64,8 +66,8 @@ code {
 
 #toc {
 	text-align: right;
-	color: #000000;
-	font-family: 'Michroma', sans-serif;
+	color: #363636;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -77,8 +79,8 @@ code {
 }
 #tocc {
 	text-align: center;
-	color: #000000;
-	font-family: 'Michroma', sans-serif;
+	color: #363636;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.1rem;
 	width: calc(100% + 0.05rem);
 	font-size: 15pt;
@@ -98,7 +100,7 @@ code {
 	padding-left: 1em;
 	padding-right: 1em;
 	text-decoration: none;
-	color:black;
+	color:#363636;
 }
 #homebutton {
 	display: none;
@@ -109,8 +111,8 @@ code {
 	font-size: 18px;
 	border: none;
 	outline: none;
-	background-color: #EDEDED;
-	color: rgb(0, 0, 0);
+	background-color: #000000;
+	color: #363636;
 	cursor: pointer;
 	padding: 15px;
 }
@@ -120,8 +122,8 @@ code {
 }
 #social {
 	text-align: right;
-	color: #000000;
-	font-family: 'Michroma', sans-serif;
+	color: #363636;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -134,8 +136,8 @@ code {
 
 #text {
 	text-align: right;
-	color: #000000;
-	font-family: 'Michroma', sans-serif;
+	color: #363636;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -146,8 +148,8 @@ code {
 
 #toptext {
 	text-align: center;
-	color: #000000;
-	font-family: 'Michroma', sans-serif;
+	color: #363636;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -158,8 +160,8 @@ code {
 
 #bottomtext {
 	text-align: center;
-	color: rgb(230, 230, 230);
-	font-family: 'Michroma', sans-serif;
+	color: #151515;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -192,7 +194,7 @@ code {
 #music-stream {
 	margin-left: -0.5rem;
 	width: calc(100% + 1.05rem);
-	font-family: 'Michroma', sans-serif;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	font-size: 1em;
 	font-weight: 400;
@@ -202,8 +204,8 @@ code {
 
 #desc {
 	text-align: center;
-	color: #000000;
-	font-family: 'Michroma', sans-serif;
+	color: #363636;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.4em;
@@ -224,7 +226,7 @@ code {
 #links {
 	margin-left: -0.5rem;
 	width: calc(100% + 1.05rem);
-	font-family: 'Michroma', sans-serif;
+	font-family: 'akkurat-monoregular', sans-serif;
 	letter-spacing: 0.05rem;
 	font-size: 1em;
 	font-weight: 400;
@@ -241,7 +243,7 @@ code {
 }
 
 #links a {
-	color: #919191;
+	color: #727272;
 	text-decoration: none;
 }
 
@@ -256,14 +258,17 @@ code {
 	padding-left: 1rem;
 	padding-right: 1rem;
 	text-align: center;
+	filter: brightness(85%);
+	
 }
 
 .row {
 	display: flex;
 	align-content: center;
-	font-family: 'Michroma', sans-serif;
-	font-size: 20pt;
-	font-weight: 600;
+	font-family: 'akkurat-monoregular', sans-serif;
+	font-size: 15pt;
+	font-weight: 100;
+	color: #909090;
 }
 
 #audio {
@@ -317,5 +322,5 @@ audio {
 }
 
 ::selection {
-    color: #837e7e;
+    color: #b8b8b8;
 }
