--- a/styles/css.css
+++ b/styles/css.css
@@ -31,7 +31,7 @@ body {
 	line-height: 1.0;
 	word-wrap: break-word;
 	overflow-x: hidden;
-	background-color: #FFFFFF;
+	background-color: #FEFCFE;
 	scrollbar-width: none;
 }
 
@@ -56,7 +56,7 @@ code {
 #text01 {
 	text-align: center;
 	color: #121212;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -67,7 +67,7 @@ code {
 #toc {
 	text-align: right;
 	color: #121212;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -80,7 +80,7 @@ code {
 #tocc {
 	text-align: center;
 	color: #121212;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.1rem;
 	width: calc(100% + 0.05rem);
 	font-size: 15pt;
@@ -123,7 +123,7 @@ code {
 #social {
 	text-align: right;
 	color: #121212;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -137,7 +137,7 @@ code {
 #text {
 	text-align: right;
 	color: #121212;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -149,19 +149,30 @@ code {
 #toptext {
 	text-align: center;
 	color: #121212;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
 	line-height: 1.5;
 	font-weight: 400;
-	padding-top: 4rem;
+	padding-top: 2rem;
+}
+
+
+#gifcontainer{
+    width: 400px;
+    background: yellow;
+}
+#floatedgif{
+    justify-content: center;
+    width: 150px;
+    background: red;
 }
 
 #bottomtext {
 	text-align: center;
 	color: #f5f4f2;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.875em;
@@ -174,7 +185,7 @@ code {
 .links {
 	cursor: default;
 	padding: 0;
-	line-height: 1.5;
+	line-height: 1;
 }
 
 .row {
@@ -194,7 +205,7 @@ code {
 #music-stream {
 	margin-left: -0.5rem;
 	width: calc(100% + 1.05rem);
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	font-size: 1em;
 	font-weight: 400;
@@ -205,7 +216,7 @@ code {
 #desc {
 	text-align: center;
 	color: #121212;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	width: calc(100% + 0.05rem);
 	font-size: 0.4em;
@@ -222,18 +233,23 @@ code {
 #music-stream a:hover {
 	text-decoration: underline;
 }
+.italic {
+	font-style: italic;
+  }
+
+
 
 #links {
 	margin-left: -0.5rem;
 	width: calc(100% + 1.05rem);
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.05rem;
 	font-size: 1em;
 	font-weight: 400;
 	text-align: right;
 	padding-right: 1rem;
-	padding-top: 0.25rem;
-	padding-bottom: 0.25rem;
+	padding-top: 0.15rem;
+	padding-bottom: 0.15rem;
 }
 
 #links li {
@@ -262,9 +278,9 @@ code {
 }
 
 .row {
-	display: flex;
+	display: flexbox;
 	align-content: center;
-	font-family: 'akkurat-monoregular', sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	font-size: 15pt;
 	font-weight: 100;
 	color: #121212;
@@ -331,6 +347,3 @@ audio {
 	display: none;
 }
 
-::selection {
-    color: #b8b8b8;
-}
